Fix HomeIntro Hero overflow

--- a/src/components/HomeIntro/HomeIntro.css
+++ b/src/components/HomeIntro/HomeIntro.css
@@ -17,7 +17,7 @@
 }
 
 .HomeIntro .CANYON-CINEMA-50 {
-  width: 541px;
+  /*width: 541px;*/
   height: 61px;
   transform: rotate(-5deg);
   font-family: Baskerville;
